[project]
name = "bus-graph-rl"
version = "0.1.0"
description = "RL bus exploring a city graph (OSM) or grid graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "networkx>=3.2",
  "osmnx>=1.9",
  "gymnasium>=0.29",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
